--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -814,23 +814,23 @@ section,
   margin-right: 0;
 }
 
-@media (max-width: 575px) {
+/* @media (max-width: 575px) {
   .portfolio .portfolio-filters li {
     font-size: 14px;
     margin: 0 5px;
   }
-}
+} */
 
-.portfolio .portfolio-content {
+ /* .portfolio .portfolio-content {
   position: relative;
   overflow: hidden;
-}
+} */
 
 .portfolio .portfolio-content img {
   transition: 0.3s;
-}
+} 
 
-.portfolio .portfolio-content .portfolio-info {
+/* .portfolio .portfolio-content .portfolio-info {
   opacity: 0;
   position: absolute;
   inset: 0;
@@ -838,7 +838,7 @@ section,
   transition: all ease-in-out 0.3s;
   background: rgba(0, 0, 0, 0.6);
   padding: 15px;
-}
+} */
 
 .portfolio .portfolio-content .portfolio-info h4 {
   font-size: 14px;
